Adatszerkezetek kurzus kész

--- a/app/src/main/res/layout/activity_java_course07_arrays.xml
+++ b/app/src/main/res/layout/activity_java_course07_arrays.xml
@@ -1,9 +1,333 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".JavaCourse_07_ArraysActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/arraysJavaTV"
+                android:text="@string/arrays01"
+                android:layout_marginTop="10sp"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/arraysJavaTV"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/arraysIntro"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/TV_50">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/arraysIntro"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="15sp"
+                android:id="@+id/felsorolas01"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:text="@string/arrays03">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas01"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas02"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/tombok">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas02"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas03"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textAlignment="center"
+                android:text="@string/tomb01">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas03"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="15sp"
+                android:id="@+id/felsorolas04"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:text="@string/list01">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas04"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas05"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/TV_51">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas05"
+                android:layout_marginStart="15sp"
+                android:layout_marginEnd="15sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/declareList"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textAlignment="center"
+                android:text="@string/declareList">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/declareList"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="15sp"
+                android:id="@+id/felsorolas06"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:text="@string/halmazok">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas06"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas07"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/sets">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas07"
+                android:layout_marginStart="0sp"
+                android:layout_marginEnd="0sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas08"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:textAlignment="center"
+                android:text="@string/declareSet">
+            </TextView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas08"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="15sp"
+                android:id="@+id/fesorolas09"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:text="@string/maps">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/fesorolas09"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas10"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/maps2">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas10"
+                android:layout_marginStart="5sp"
+                android:layout_marginEnd="5sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas11"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/declareMap">
+            </TextView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas11"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="15sp"
+                android:id="@+id/fesorolas12"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:text="@string/stack">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/fesorolas12"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas13"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/lifo">
+            </TextView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas13"
+                android:layout_marginStart="15sp"
+                android:layout_marginEnd="15sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas14"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textAlignment="center"
+                android:text="@string/declareStack">
+            </TextView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas14"
+                android:layout_marginStart="15sp"
+                android:layout_marginEnd="15sp"
+                android:layout_marginTop="15sp"
+                android:id="@+id/felsorolas15"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:text="@string/queue">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas15"
+                android:layout_marginStart="15sp"
+                android:layout_marginEnd="15sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas16"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/fifo">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas16"
+                android:layout_marginStart="15sp"
+                android:layout_marginEnd="15sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas17"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/declareQueue">
+            </TextView>
+
+            <Button
+                android:id="@+id/btnBackJavaCourseList07"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_below="@+id/felsorolas17"
+                android:layout_marginStart="40sp"
+                android:layout_marginTop="20sp"
+                android:layout_marginEnd="250sp"
+                android:fontFamily="@font/aldrich"
+                android:text="@string/backToJavaCourseList"
+                android:textColor="@color/white"
+                app:icon="?attr/homeAsUpIndicator" />
+
+            <Button
+                android:id="@+id/btnNextCourseJava07"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_below="@+id/felsorolas17"
+                android:layout_marginStart="180sp"
+                android:layout_marginTop="20sp"
+                android:layout_marginEnd="40sp"
+                android:fontFamily="@font/aldrich"
+                android:text="@string/arraysQuiz"
+                android:textColor="@color/white"
+                app:icon="@drawable/iconnext" />
+        </RelativeLayout>
+    </ScrollView>
+
+</RelativeLayout>
