--- a/app/src/main/res/layout/activity_java_course12_typeconversion.xml
+++ b/app/src/main/res/layout/activity_java_course12_typeconversion.xml
@@ -1,9 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".JavaCourse_12_TypeconversionActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/typeConvJavaTV"
+                android:text="@string/castingTV"
+                android:layout_marginTop="10sp"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:textAlignment="center">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/typeConvJavaTV"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
+                android:layout_marginTop="10sp"
+                android:fontFamily="sans-serif"
+                android:id="@+id/typesIntro"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/kasztolas">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/typesIntro"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="15sp"
+                android:id="@+id/felsorolas01"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:text="@string/implicitType">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas01"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas02"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/typeConvImplicit">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas02"
+                android:layout_marginStart="35sp"
+                android:layout_marginEnd="35sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/implicitDeclare"
+                app:drawableTopCompat="@drawable/implicitcastingimg">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/implicitDeclare"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
+                android:id="@+id/felsorolas04"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:text="@string/explicitTypeConv">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas04"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas05"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/explConv">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas05"
+                android:layout_marginStart="35sp"
+                android:layout_marginEnd="35sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/explicitDeclare"
+                app:drawableTopCompat="@drawable/explicitimg"
+                >
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/explicitDeclare"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
+                android:id="@+id/felsorolas06"
+                android:fontFamily="@font/aldrich"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:text="@string/oopConv">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas06"
+                android:layout_marginStart="10sp"
+                android:layout_marginEnd="10sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/felsorolas07"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:text="@string/upAndDownCast">
+            </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/felsorolas07"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginTop="10sp"
+                android:id="@+id/castingDeclare"
+                app:drawableTopCompat="@drawable/castingimg"
+                >
+            </TextView>
+
+            <Button
+                android:id="@+id/btnBackJavaCourseList12"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_below="@+id/castingDeclare"
+                android:layout_marginStart="40sp"
+                android:layout_marginEnd="250sp"
+                android:fontFamily="@font/aldrich"
+                android:text="@string/backToJavaCourseList"
+                android:textColor="@color/white"
+                app:icon="?attr/homeAsUpIndicator" />
+
+            <Button
+                android:id="@+id/btnNextFinalQuiz"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_below="@+id/castingDeclare"
+                android:layout_marginStart="180sp"
+                android:layout_marginEnd="40sp"
+                android:fontFamily="@font/aldrich"
+                android:text="@string/finalJavaQuiz"
+                android:textColor="@color/white"
+                app:icon="@drawable/iconnext" />
+        </RelativeLayout>
+    </ScrollView>
+
+
+</RelativeLayout>
