Tananyag betűtípusának megváltoztatása a jobb olvashatóság miatt

--- a/app/src/main/res/layout/activity_java_course00_introduction.xml
+++ b/app/src/main/res/layout/activity_java_course00_introduction.xml
@@ -30,11 +30,11 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/introToJava"
                 android:layout_below="@+id/introduction"
-                android:layout_marginStart="30sp"
-                android:layout_marginEnd="30sp"
+                android:layout_marginStart="15sp"
+                android:layout_marginEnd="15sp"
                 android:layout_marginTop="10sp"
                 android:text="@string/TV_01"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center">
@@ -56,11 +56,11 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/JavaIs"
                 android:layout_below="@+id/whatsJava"
-                android:layout_marginStart="30sp"
-                android:layout_marginEnd="30sp"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:text="@string/TV_02"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center">
@@ -82,11 +82,11 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/NyelviElemekJava"
                 android:layout_below="@+id/NyelviElemek"
-                android:layout_marginStart="30sp"
-                android:layout_marginEnd="30sp"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:text="@string/TV_03"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center">
@@ -108,11 +108,11 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/OOPAlapokJava"
                 android:layout_below="@+id/OOPAlapok"
-                android:layout_marginStart="30sp"
-                android:layout_marginEnd="30sp"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:text="@string/TV_04"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center">
