--- a/app/src/main/res/layout/activity_java_course05_loops.xml
+++ b/app/src/main/res/layout/activity_java_course05_loops.xml
@@ -47,7 +47,7 @@
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="15sp"
                 android:id="@+id/felsorolas01"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -75,7 +75,7 @@
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas03"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -103,7 +103,7 @@
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas05"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -132,7 +132,7 @@
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="15sp"
                 android:id="@+id/felsorolas06"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -160,7 +160,7 @@
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas08"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -189,7 +189,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas10"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -218,7 +218,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/fesorolas12"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -232,7 +232,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas13"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
