--- a/app/src/main/res/layout/activity_java_course01_variables.xml
+++ b/app/src/main/res/layout/activity_java_course01_variables.xml
@@ -28,11 +28,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/variablesJava01"
-                android:layout_marginStart="30sp"
-                android:layout_marginEnd="30sp"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/introToVariables"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -46,7 +46,7 @@
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/TwoType"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -56,11 +56,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/TwoType"
-                android:layout_marginStart="60sp"
-                android:layout_marginEnd="60sp"
+                android:layout_marginStart="30sp"
+                android:layout_marginEnd="30sp"
                 android:layout_marginTop="15sp"
                 android:id="@+id/felsorolas01"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -74,7 +74,7 @@
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas02"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -88,7 +88,7 @@
                 android:layout_marginEnd="30sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas03"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -102,7 +102,7 @@
                 android:layout_marginEnd="30sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas04"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -112,11 +112,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/felsorolas04"
-                android:layout_marginStart="35sp"
-                android:layout_marginEnd="35sp"
+                android:layout_marginStart="20sp"
+                android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/RefVariable"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -126,11 +126,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/RefVariable"
-                android:layout_marginStart="30sp"
-                android:layout_marginEnd="30sp"
+                android:layout_marginStart="50sp"
+                android:layout_marginEnd="50sp"
                 android:layout_marginTop="15sp"
                 android:id="@+id/felsorolas05"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -144,7 +144,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas06"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -173,7 +173,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/declarationVariables01"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -187,7 +187,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/inicVariables01"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -201,7 +201,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/inicVariables02"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
