--- a/app/src/main/res/layout/activity_java_course03_operators.xml
+++ b/app/src/main/res/layout/activity_java_course03_operators.xml
@@ -33,7 +33,7 @@
                 android:layout_marginEnd="30sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/introToOperators"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -62,7 +62,7 @@
                 android:layout_marginEnd="50sp"
                 android:layout_marginTop="15sp"
                 android:id="@+id/felsorolas01"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -76,7 +76,7 @@
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas02"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -90,7 +90,7 @@
                 android:layout_marginEnd="30sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas03"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -104,7 +104,7 @@
                 android:layout_marginEnd="30sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas04"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -118,7 +118,7 @@
                 android:layout_marginEnd="30sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas05"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -147,7 +147,7 @@
                 android:layout_marginEnd="30sp"
                 android:layout_marginTop="15sp"
                 android:id="@+id/felsorolas06"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -161,7 +161,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas07"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -175,7 +175,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas08"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -204,7 +204,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/fesorolas09"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -218,7 +218,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas10"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -232,7 +232,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas11"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -261,7 +261,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/fesorolas12"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -275,7 +275,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas13"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -289,7 +289,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas14"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -303,7 +303,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas15"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -332,7 +332,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/fesorolas16"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -346,7 +346,7 @@
                 android:layout_marginEnd="35sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas17"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
