--- a/app/src/main/res/layout/activity_java_course07_arrays.xml
+++ b/app/src/main/res/layout/activity_java_course07_arrays.xml
@@ -33,7 +33,7 @@
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/arraysIntro"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -62,7 +62,7 @@
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas02"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -105,7 +105,7 @@
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas05"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -148,7 +148,7 @@
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas07"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -192,7 +192,7 @@
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas10"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -236,7 +236,7 @@
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas13"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -281,7 +281,7 @@
                 android:layout_marginEnd="15sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas16"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
