--- a/app/src/main/res/layout/activity_java_course09_methods.xml
+++ b/app/src/main/res/layout/activity_java_course09_methods.xml
@@ -33,7 +33,7 @@
                 android:layout_marginEnd="10sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/methodsIntro"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -62,7 +62,7 @@
                 android:layout_marginEnd="10sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas02"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -102,7 +102,7 @@
                 android:layout_marginEnd="10sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas05"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -142,7 +142,7 @@
                 android:layout_marginEnd="10sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas07"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -183,7 +183,7 @@
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas10"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
@@ -223,7 +223,7 @@
                 android:layout_marginEnd="10sp"
                 android:layout_marginTop="10sp"
                 android:id="@+id/felsorolas13"
-                android:fontFamily="@font/aldrich"
+                android:fontFamily="sans-serif"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textAlignment="center"
